--- a/react-tailwind-useFieldArray-hook-form-typescript-app/package.json
+++ b/react-tailwind-useFieldArray-hook-form-typescript-app/package.json
@@ -41,6 +41,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/flat": "^5.0.2",
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
